# aoc

./: .gitignore  README.md
2023/: README.md
2023/01/elixir/lib/: day01.ex
2023/01/haskell/: day01.cabal
2023/01/haskell/app/: Main.hs
2023/02/elixir/lib/: day02.ex
2023/02/haskell/: Int  day02.cabal
2023/02/haskell/app/: Main.hs
2023/03/haskell/: day03.cabal
2023/03/haskell/app/: Main.hs
2023/03/rust/src/: main.rs
2023/04/haskell/: day04.cabal
2023/04/haskell/app/: Main.hs
2023/04/rust/src/: main.rs
2023/05/rust/src/: main.rs
2023/06/rust/src/: main.rs
2023/07/rust/src/: main.rs  part1.rs  part2.rs
2023/08/rust/src/: main.rs
2023/10/rust/: Cargo.toml  README.md
2023/11/rust/src/: main.rs
2023/13/rust/input/: test2.txt
2023/13/rust/src/: main.rs
2023/16/rust/: Cargo.toml
2023/17/rust/: README.md
2023/17/rust/src/: main.rs
2023/18/haskell/: day18.cabal
2023/19/haskell/: day19.cabal
2024/ocaml/: .ocamlformat  README.md  aoc2024.opam  dune-project
2024/ocaml/lib/: advent.ml  advent.mli  helpers.ml  helpers.mli
day_01/lib/: day01.ex
day_02/lib/: day02.ex
day_03/src/: main.rs
day_04/src/: main.rs
day_05/src/: main.rs
day_06/src/: main.rs
day_07/src/: part1.rs  part2.rs
day_08/src/: main.rs
day_09/src/: main.rs
day_10/: README.md
day_10/src/: main.rs
day_11/: README.md
day_11/src/: main.rs
day_12/: README.md
day_12/src/: main.rs
day_13/: README.md
day_14/: Cargo.toml
day_14/src/: main.rs
day_15/src/: main.rs
day_16/: README.md
day_16/src/: main.rs
day_17/: Cargo.toml  README.md
(+2 files in other folders)
