(lang dune 3.17)

(name aoc2024)

(generate_opam_files true)

(source
 (github RisGar/aoc))

(authors "Rishab Garg <contact@rishab-garg.me>")

(maintainers "Rishab Garg <contact@rishab-garg.me>")

(license EUPL-1.2)

; (documentation https://url/to/documentation)

(package
 (name aoc2024)
 (synopsis "Advent of Code 2024 in OCaml")
 (description "Advent of Code 2024 in OCaml")
 (depends ocaml base re str)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
